Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@ func2 has 0 succeeding functions
 func2 processing... 
 </code></pre>
 
+<p>Currently, you may use "this.manager.base" within the function handed over to c_chain() the access "Obj".</p>
+
 <h3>Add asynchronous processing to a chained function call</h3>
 
 <p>Same as above, but func1() looks like this:</p>
