Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ chainifying functions is cool!
 
 <p>I am currently investigating alternatives to achieve the latter without actually calling exec().</p>
 
-<p>Happy function chaining :)</p>
+<p>Happy function chaining :) Matthias Stumpp</p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/MStumpp">MStumpp</a></p>
