Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ Model.prototype.func2 = function() {
 };
 </code></pre>
 
-<p>Chainify() the Model and call the functions:</p>
+<p>chainify() the Model and call the functions:</p>
 
 <pre><code>chainify(Model);
 
